# ftc-opencv

./: import-summary.txt  settings.gradle
FtcRobotController/: build.gradle
FtcRobotController/src/main/: AndroidManifest.xml
FtcRobotController/src/main/java/org/firstinspires/ftc/robotcontroller/custom/: CustomFtcRcActivity.java  TeamCodeNativeGlue.java
FtcRobotController/src/main/java/org/firstinspires/ftc/robotcontroller/internal/: FtcRobotControllerActivity.java
FtcRobotController/src/main/res/layout/: activity_custom_ftc_rc.xml  activity_ftc_controller.xml
FtcRobotController/src/main/res/xml/: device_filter.xml
TeamCode/: CMakeLists.txt  build.gradle
TeamCode/src/main/cpp/: lib.cpp  teamcode.cpp  teamcode_glue.cpp
jOpenCV/: build.gradle
